# aliases-cheatsheet

./: .gitignore  LICENSE  Makefile  README.md  index.html  parse_aliases.py  pyproject.toml  requirements.txt
aliases_cheatsheet/: cli.py  config.py  lib.py  live.py  parse_aliases.py  parse_git_config.py
aliases_cheatsheet/www/: index.html
aliases_cheatsheet/www/assets/css/: styles.css
aliases_cheatsheet/www/assets/js/: main.js
assets/js/: main.js
docs/: README.md  installation.md  usage.md
