[project]
name = "aliases-cheatsheet"
version = "0.1.0"
description = ""
authors = [
  { name = "Michael Currin", email = "18750745+MichaelCurrin@users.noreply.github.com" },
]
license = { text = "Make your Bash and Git aliases easy to view and search" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["prettytable (==3.10)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.9.7"
